--- a/Weitianshi/pages/my/myNew/myNew.wxml
+++ b/Weitianshi/pages/my/myNew/myNew.wxml
@@ -1,2 +1,120 @@
-<!--pages/my/myNew/myNew.wxml-->
-<text>pages/my/myNew/myNew.wxml</text>
+<import src="/pages/Template/Template.wxml" />
+<view class="user_info flex user-infom" bindtap="toMyCard">
+  <view class="user_left">
+    <view class="flex">
+      <view class="user_name" wx:if="{{user.user_real_name}}">{{user.user_real_name}}</view>
+      <view class="user_name" wx:if="{{!user.user_real_name}}">代替名</view>
+      <view class="user_career" wx:if="{{user.user_company_career}}">{{user.user_company_career}}</view>
+      <view class="user_career" wx:if="{{!user.user_company_career}}">职位名称</view>
+      <view class="userPart flex" wx:if="{{user.identify_status == 2 &&IdentificationShow==1}}">
+        <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
+        <view class="userPart1">{{user.authentication[0].group_title}}</view>
+      </view>
+      <view class="userAuthentication flex" catchtap="authentication" wx:if="{{user.identify_status == 0 && IdentificationShow==1}}" data-identitystatus="{{0}}">认证</view>
+      <view class="userAuthentication flex" catchtap="authentication" wx:if="{{user.identify_status == 3 && IdentificationShow==1}}" data-identitystatus="{{3}}">认证</view>
+      <view class="userAuthentication flex" wx:if="{{user.identify_status == 1 && IdentificationShow==1}}">认证中</view>
+    </view>
+    <view class="user_play_time" wx:if="{{playTime==1}}">{{user.active_status}}</view>
+    <view class="user_company" wx:if="{{user.user_company_name}}">公司：{{user.user_company_name}}</view>
+    <view class="user_company" wx:if="{{!user.user_company_name}}">公司：暂无编辑</view>
+    <view class="user_mobile" wx:if="{{user.user_brand}}">品牌：{{user.user_brand}}</view>
+    <view class="user_mobile" wx:if="{{!user.user_brand}}">品牌：暂无编辑</view>
+    <view class="user_mobile" wx:if="{{user.user_mobile}}">手机：<label data-telephone="{{user.user_mobile}}" id="{{blue==-1?'mobileStyle':''}}" catchtap="telephone">{{user.user_mobile}}</label>
+    </view>
+    <view class="user_mobile" wx:if="{{!user.user_mobile}}">手机：暂无编辑</view>
+    <view class="user_email flex" wx:if="{{user.user_email}}">
+      <view>邮箱：{{user.user_email}}</view>
+    </view>
+    <view class="user_email flex" wx:if="{{!user.user_email}}">邮箱：暂无编辑
+    </view>
+  </view>
+  <view class="user_right" style="position:relative;">
+    <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
+    <view wx:if="{{user.user_avatar_text}}" class="user_text noPic">{{user.user_avatar_text}}</view>
+    <image wx:if="{{!user}}" class="user_pic" src="/img/img-avatar@3x.png"></image>
+  </view>
+  <view class="line"></view>
+  <view class="flex iconBox">
+    <view class="littleBox">
+      <image src="/img/icon-weixin@2x.png" class="messageIconStyle"></image>
+    </view>
+    <view class="littleBox">
+      <image src="/img/icon-maimai@2x.png" class="messageIconStyle"></image>
+    </view>
+    <view class="littleBox">
+      <image src="/img/icon-zhihu@2x.png" class="messageIconStyle"></image>
+    </view>
+    <view class="littleBox">
+      <image src="/img/icon-weibo@2x.png" class="messageIconStyle"></image>
+    </view>
+    <view class="littleBox">
+      <image src="/img/icon-qq@2x.png" class="messageIconStyle"></image>
+    </view>
+    <view class="littleBox">
+      <image src="/img/icon-linkedin@2x.png" class="messageIconStyle"></image>
+    </view>
+  </view>
+</view>
+<!--人气-->
+<view class="user_down flex">
+  <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity">
+    <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
+    <label class="popularityNum" wx:if="{{count.user_view_new && show ==1}}">+{{count.user_view_new}}</label>
+    <label class="popularityNum" wx:if="{{count.user_view_new==0 || show ==0}}"></label>
+    <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+    <view class="popularity-people">人气</view>
+  </view>
+  <!--加我为人脉-->
+  <view class="user_attention user_tips contacts-requestm" bindtap="attention">
+    <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
+    <label class="attentionNum" wx:if="{{count.user_followed_new && show ==1}}">+{{count.user_followed_new}}</label>
+    <label class="popularityNum" wx:if="{{count.user_followed_new==0 || show ==0}}"></label>
+    <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+    </view>
+    <view class="attention-people">加我为人脉</view>
+  </view>
+  <!--潜在项目-->
+  <view class="user_potential user_tips potential-projectm" bindtap="pushTo">
+    <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
+    <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
+    <label class="popularityNum" wx:if="{{count.project_push_new==0 || show ==0}}"></label>
+    <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+    <view class="potential-content">潜在项目</view>
+  </view>
+</view>
+<!--模块内容  -->
+
+<view class="outSideBox">
+  <view class="flex blockInfo" bindtap="identity">
+    <!-- <image src="src" class="blockPic"></image> -->
+    <view class="blockTitle">身份认证</view>
+    <view class="blockContent">立即认证</view>
+  </view>
+  <view class="blockInfo flex" bindtap="projectShop">
+    <!-- <image src="src" class="blockPic"></image> -->
+    <view class="blockTitle">项目店铺</view>
+    <view class="flex">
+      <view class="number">10</view>
+      <!-- <view class="personListContentAfter"></view> -->
+      <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+    </view>
+  </view>
+  <view class="blockInfo flex" bindtap="contactProject">
+    <!-- <image src="src" class="blockPic"></image> -->
+    <view class="blockTitle">约谈的项目</view>
+    <view class="flex">
+      <view class="number">10</view>
+      <!-- <view class="personListContentAfter"></view> -->
+      <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+    </view>
+  </view>
+  <view class="blockInfo flex" bindtap="collectProject">
+    <!-- <image src="src" class="blockPic"></image> -->
+    <view class="blockTitle">收藏的项目</view>
+    <view class="flex">
+      <view class="number">10</view>
+      <!-- <view class="personListContentAfter"></view> -->
+      <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+    </view>
+  </view>
+</view>
