--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -638,3 +638,296 @@ textarea {
   opacity: 0.5;
   z-index: 99;
 }
+
+/*项目卡片*/
+.t-outBox {
+  margin: 0 16px 0 16px;
+  width: auto;
+  height: auto;
+  position: relative;
+  /* border-radius: 8rpx; */
+}
+
+.t-outBox:first-child {
+  margin-top: 32rpx;
+}
+
+.t-insideBox {
+  padding: 32rpx 32rpx 24rpx 32rpx;
+  background: #fff;
+  border-radius: 8rpx;
+}
+
+.t-outBox .t-describle {
+  font-size: 34rpx;
+  color: #666;
+  line-height: 38rpx;
+  text-align: left;
+  margin-bottom: 34rpx;
+  /* width:1418rpx; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.t-allIndustry {
+  font-size: 26rpx;
+  color: #40587a;
+  line-height: 26rpx;
+  text-align: left;
+  margin-bottom: 24rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.t-projectDetailLine {
+  padding: 0 16rpx;
+  border-right: 1rpx solid #999;
+}
+
+.t-projectDetailLight {
+  padding: 0 16rpx;
+  border-right: 1rpx solid #999;
+  color: #40587a;
+}
+
+.t-otherInfo {
+  position: relative;
+  padding-bottom: 30rpx;
+  border-bottom: 1rpx solid #e6e6e6;
+}
+
+.t-others_pic {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+  border-radius: 50%;
+}
+
+.t-projectDetailLine:first-child {
+  padding-left: 0;
+}
+
+.t-projectDetailLine:last-child {
+  border-right: none;
+}
+
+.t-projectDetailLight:first-child {
+  padding-left: 0;
+}
+
+.t-projectDetailLight:last-child {
+  border-right: none;
+}
+
+.t-allProjectDetail {
+  font-size: 26rpx;
+  color: #999;
+  line-height: 26rpx;
+  text-align: left;
+  margin-bottom: 34rpx;
+}
+
+.t-userInfo {
+  width: 566rpx;
+  margin-top: 9rpx;
+}
+
+.t-userCompany, .t-userCareer, .t-userName {
+  font-size: 22rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  width: 320rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.t-user_text {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+  border-radius: 50%;
+  background: #999;
+  font-size: 22rpx;
+  background: #999;
+  line-height: 40rpx;
+  text-align: center;
+}
+
+.t-userCareer, .t-userName {
+  margin-right: 16rpx;
+  white-space: nowrap;
+  width: auto;
+  text-overflow: clip;
+  overflow: none;
+}
+
+.t-projectInfo {
+  height: 72rpx;
+  position: relative;
+}
+
+.t-seeNum, .t-haveInterest {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 24rpx;
+  text-align: left;
+  margin-top: 34rpx;
+}
+
+.t-haveInterest {
+  margin-left: 388rpx;
+  color: #999;
+}
+
+.t-btnHaveInterest, .t-btnNoInterest {
+  font-size: 24rpx;
+  color: #40587a;
+  border: 1px solid black;
+  height: 52rpx;
+  line-height: 52rpx;
+  padding: 0 32rpx;
+  margin: 20rpx 24rpx 0 185rpx;
+}
+
+.t-btnNoInterest {
+  margin: 20rpx 0 0 0;
+}
+
+.t-projectDetailType {
+  height: 92rpx;
+  width: 92rpx;
+  right: -3rpx;
+  top: -6rpx;
+  position: absolute;
+}
+
+.t-toAccreditation {
+  font-size: 24rpx;
+  color: #fff;
+  line-height: 52rpx;
+  text-align: center;
+  background: #40587a;
+  border-radius: 4rpx;
+  width: 136rpx;
+  height: 52rpx;
+  margin-top: 18rpx;
+  position: absolute;
+  right: 0;
+}
+
+.t-accreditation {
+  background: #fff1e8;
+  height: 88rpx;
+  font-size: 24rpx;
+  color: #999;
+  line-height: 88rpx;
+  text-align: left;
+  padding-left: 32rpx;
+}
+
+.t-toAccreditation {
+  font-size: 24rpx;
+  color: #fff;
+  line-height: 52rpx;
+  text-align: center;
+  background: #40587a;
+  border-radius: 4rpx;
+  width: 136rpx;
+  height: 52rpx;
+  margin-top: 18rpx;
+  position: absolute;
+  right: 0;
+}
+
+.t-btnToAccreditation {
+  font-size: 24rpx;
+  color: #fff;
+  line-height: 52rpx;
+  text-align: center;
+  background: #40587a;
+  border-radius: 4rpx;
+  width: 136rpx;
+  height: 52rpx;
+  margin-top: 18rpx;
+  position: absolute;
+  right: 32rpx;
+}
+
+.t-highBox {
+  height: 88rpx;
+  width: 100%;
+}
+
+.t-readed {
+  color: #40587a;
+}
+
+.t-user_image {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+  border-radius: 50%;
+  font-size: 22rpx;
+  background: #f2f2f2;
+  line-height: 40rpx;
+  text-align: center;
+  color: #40587a;
+}
+
+.t-competitor {
+  position: fixed;
+  bottom: 132rpx;
+  right: 0;
+  background: #fff;
+  border: 0 solid #e0e6ed;
+  box-shadow: 0 0 2px 0 rgba(64, 88, 122, 0.10);
+  width: 166rpx;
+  height: 33px;
+  font-family: MicrosoftYaHei;
+  font-size: 28rpx;
+  color: #40587a;
+  letter-spacing: 0;
+  line-height: 66rpx;
+  text-align: right;
+  border-radius: 35rpx 0 0 35rpx;
+  padding-right: 28rpx;
+}
+
+
+.t-time {
+  font-size: 20rpx;
+  color: #999;
+  line-height: 20rpx;
+  text-align: right;
+  margin: 10rpx 0 20rpx 0;
+}
+
+.t-appling, .t-refuseToRead, .t-agreeToRead {
+  font-size: 24rpx;
+  color: #ccc;
+  line-height: 24rpx;
+  text-align: center;
+  margin-left: 370rpx;
+  position: absolute;
+  top: 34rpx;
+  right: 0;
+}
+
+.t-agreeToRead {
+  color: #40587a;
+}
+
+.t-hightLight {
+  color: #40587a;
+}
+
+.t-noLight {
+  color: #999;
+}
