--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -1,7 +1,7 @@
 <import src="/pages/Template/Template.wxml" />
 <view class="swiper-tab">
-  <view class="swiper-tab-list {{currentTab===0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">精选</view>
-  <view class="swiper-tab-list {{currentTab===1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
+  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">精选</view>
+  <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">最新</view>
 </view>
 <!--筛选和搜索  -->
 <view class="screen flex">
@@ -57,7 +57,7 @@
 <!--项目展示列表  -->
 <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:945rpx" bindchange="bindChange">
   <!--精选  -->
-  <swiper-item>
+  <swiper-item data-current='0'>
     <!--banner轮播  -->
     <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true'>
       <block wx:for="{{imgUrls}}" wx:key='item'>
@@ -69,21 +69,22 @@
     <!--项目展示  -->
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
       <template is="selectProject" data="{{list:slectProject,type:2}}"></template>
-
-      <!--空状态-->
-      <image class="empty" src="/img/empty.png" wx:if="{{myProject==''}}"></image>
-      <view class="floatBtn">
-        <view class="accreditation flex">
-          <view>创建项目，参与融资对接</view>
-          <view class="btnToAccreditation publish-projectm" bindtap="toCreateProject">创建项目</view>
-        </view>
-      </view>
     </scroll-view>
+    <!--空状态-->
+    <image class="empty" src="/img/empty.png" wx:if="{{myProject==''}}"></image>
     <!--模态层  -->
     <view class='t-modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
   <!--最新 -->
-  <swiper-item>
+  <swiper-item data-current='1'>
+    <!--项目展示  -->
+    <scroll-view scroll-y="true" bindscrolltolower="financingNeed">
+      <template is="selectProject" data="{{list:financingNeed,type:2}}"></template>
+    </scroll-view>
+    <!--空状态-->
+    <view wx:if="{{financingNeed==''}}">
+      <image class="empty" src="/img/img-wujieguo@3x.png"></image>
+    </view>
     <!--模态层  -->
     <view class='t-modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
   </swiper-item>
