人脉搜索分页bug修复
1.原因:变量名没有和通用函数匹配上

--- a/Weitianshi/pages/search/search2/search2.wxml
+++ b/Weitianshi/pages/search/search2/search2.wxml
@@ -80,7 +80,7 @@
 <!--没有更多-->
 <view class="error" wx:if="{{error==1}}">{{error_text}}</view>
 
-<!--搜索结果无-->
+<!--空状态-->
 <view class="nullState" wx:if="{{empty == '1'}}">
   <view class="nullState_text">
     <view>暂无人脉</view>
