--- a/Weitianshi/pages/myProject/editProject/editProject.wxml
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxml
@@ -7,7 +7,7 @@
   </view>
 
   <!--项目领域-->
-  <template is="input_jump" data="{{...industryCard}}" ></template>
+  <template is="input_jump" data="{{...industryCard}}"></template>
 
   <view class="card">
     <view class="text">项目阶段*</view>
@@ -44,12 +44,12 @@
       <view class="tips {{tipsIndex==0 ? 'tips_on' : ''}}" id="tips3" bindtap="tipsOn" data-tips-index="0">其他</view>
     </view>
   </view>
-      <view class="card">
-      <view class="text">项目亮点*</view>
-      <view id="greatPoint" class="slect flex" style="padding:0;">
-        <input class="slectInput" placeholder="请输入项目亮点" placeholder-style='color:#ccc' value="{{pro_goodness}}"bindblur="slectInput" maxlength="500"/>
-      </view>
+  <view class="card">
+    <view class="text">项目亮点*</view>
+    <view id="greatPoint" class="slect flex" style="padding:0;">
+      <input class="slectInput" placeholder="请输入项目亮点" placeholder-style='color:#ccc' value="{{pro_goodness}}" bindblur="slectInput" maxlength="500" />
     </view>
+  </view>
 
   <!--非必填-->
   <!--<view class="notNecessary">
@@ -85,10 +85,7 @@
   <!--<view class="grey">
     BP私密保护,投资人可通过申请查看来了解项目价值
   </view>-->
-  
-  <button class="nextBtn" bindtap="public">
-    维护项目
-  </button>
+
 
   <!--错语提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
@@ -99,3 +96,54 @@
     <view class="weui-loadmore__tips">正在加载</view>
   </view>
 </view>
+  <view class="topBox">
+    <view class="userBox">
+      <view class="projectBoxContent flex">
+        <view class="projectTitle">商业计划书</view>
+        <view class="flex">
+          <view class="projectContent">去电脑上传</view>
+          <!-- <view class="personListContentAfter"></view> -->
+        </view>
+      </view>
+    </view>
+    <view class="userBox">
+      <view class="projectBoxContent flex">
+        <view class="projectTitle">投后股份（%）</view>
+        <view class="flex">
+          <view class="projectContent">请输入投后股权占比</view>
+          <!-- <view class="personListContentAfter"></view> -->
+        </view>
+      </view>
+    </view>
+    <view class="userBox">
+      <view class="projectBoxContent flex noBorder">
+        <view class="projectTitle">私密性设置</view>
+        <view class="flex">
+          <view class="projectContent">私密项目（仅个人/团队可见）</view>
+          <!-- <view class="personListContentAfter"></view> -->
+        </view>
+      </view>
+    </view>
+  </view>
+  <view class="tipsNew flex">
+    <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
+    <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
+  </view>
+  <view class="choiceBox flex">
+    <view class="content">需要Bp美化</view>
+    <switch checked bindchange="switch1Change" class="switchTab" />
+  </view>
+    <view class="choiceBox flex">
+    <view class="content">需要融资股份（FA）服务</view>
+    <switch checked bindchange="switch1Change" class="switchTab" />
+  </view>
+  <view class="question">
+    <view class="questionWhy">Q：什么是融资顾问服务</view>
+    <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
+    </view>
+  </view>
+    <!-- <button class="nextBtn" bindtap="public">
+    维护项目
+  </button> -->
+  <view class="highBox"></view>
+<template is="buttonOne" data="{{text:'维护项目',btnName:'public'}}"></template>
