--- a/Weitianshi/pages/myProject/editProject/editProject.wxss
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxss
@@ -119,3 +119,103 @@ page {
   height:18rpx;
   margin-right:8rpx;
 }
+/*新样式  */
+
+.topBox {
+  margin-bottom: 30rpx;
+}
+
+.userBox {
+  width: 100%;
+  height: 114rpx;
+  background: #fff;
+  line-height: 112rpx;
+}
+
+.projectBoxContent {
+  justify-content: space-between;
+  margin: 0 32rpx;
+  border-bottom: 1rpx solid #e6e6e6;
+  height: auto;
+}
+
+.projectTitle {
+  font-size: 32rpx;
+  color: #333;
+}
+
+.projectContent {
+  font-size: 28rpx;
+  color: #ccc;
+  /* line-height: 28rpx; */
+  text-align: right;
+  margin-right: 12rpx;
+}
+
+.arrowStyle {
+  margin-top: 47rpx;
+  width: 12rpx;
+  height: 20rpx;
+}
+
+.tipsNew {
+  /* height: 82rpx; */
+  padding: 30rpx 0;
+  padding-top:0;
+    justify-content: center;
+    align-items: center;
+}
+
+.tipsPic {
+  width: 24rpx;
+  height: 24rpx;
+  margin-right: 8rpx;
+  /* margin-left: 96rpx; */
+  margin-top: 2rpx;
+}
+
+.tipsContent {
+  font-size: 24rpx;
+  color: #666;
+}
+
+.choiceBox {
+  padding: 0 32rpx;
+  justify-content: space-between;
+  background: white;
+}
+
+.content {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 112rpx;
+  height: 112rpx;
+}
+
+.switchTab {
+  line-height: 112rpx;
+  text-align: right;
+}
+
+.question {
+  font-size: 28rpx;
+  color: #fc703e;
+  line-height: 28rpx;
+  margin: 32rpx;
+}
+
+.questionWhy {
+  margin-bottom: 14rpx;
+}
+
+.answer {
+  font-size: 24rpx;
+  color: #666;
+  line-height: 36rpx;
+}
+.highBox{
+  height:146rpx;
+}
+.noBorder{
+  border:none;
+}
