--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -10,10 +10,6 @@ scroll-view {
   height: 93%;
 }
 
-.ziben {
-  color: #ccc;
-}
-
 /*我的项目卡片*/
 
 .on {
@@ -24,40 +20,6 @@ scroll-view {
 .noMessage {
   background: white;
   height: 100%;
-}
-
-.empty {
-  padding-top: 92rpx;
-  width: 252rpx;
-  height: 190rpx;
-  /*background:red;*/
-}
-
-/*发布按钮*/
-
-.publish {
-  margin: 32rpx;
-  background: white;
-  border-radius: 52rpx;
-  padding: 24rpx 0;
-}
-
-.publish view {
-  display: block;
-  margin: auto;
-}
-
-.publish view:first-child {
-  font-size: 28rpx;
-  padding-bottom: 8rpx;
-}
-
-.publish view:nth-child(2) {
-  font-size: 20rpx;
-}
-
-.weui-media-box {
-  padding: 32rpx;
 }
 
 .weui-media-box__desc {
@@ -75,47 +37,8 @@ scroll-view {
   padding-left: 0;
 }
 
-.weui-media-box__info .publish {
-  border: 1px #777 solid;
-  width: 6em;
-  padding: 3px 0;
-  display: inline-block;
-}
-
-.box__title_in-text {
-  font-size: 28rpx;
-  text-align: left;
-  padding-bottom: 18rpx;
-}
-
-.theOne {
-  background: #40587a;
-  color: white;
-  display: inline-block;
-  width: 5em;
-  text-align: center;
-}
-
 .sort {
   display: flex;
-}
-
-.tip {
-  border: 1px solid #e0e0e0;
-  border-radius: 49px;
-  font-size: 20rpx;
-  padding: 4rpx 15rpx;
-  margin-right: 12rpx;
-  margin-top: 20rpx;
-  color: #999;
-}
-
-.tip:last-child {
-  border: 1px solid #e0e0e0;
-}
-
-.tips {
-  justify-content: space-between;
 }
 
 /*others的卡片*/
@@ -147,18 +70,6 @@ scroll-view {
   color: #666;
 }
 
-.others_company {
-  font-size: 24rpx;
-  color: #666;
-  padding-bottom: 16rpx;
-}
-
-.others_email {
-  font-size: 24rpx;
-  color: #333;
-  padding-left: 16rpx;
-}
-
 .others_tips {
   border: 1px solid #333;
   border-radius: 8rpx;
@@ -166,11 +77,6 @@ scroll-view {
   font-size: 20rpx;
   border-color: #ccc;
   color: #ccc;
-}
-
-.others_tips_on {
-  border: 1px solid #333;
-  color: #333;
 }
 
 .offer_search {
@@ -206,34 +112,11 @@ scroll-view {
 
 /*当前页面的修改*/
 
-.greatPoint {
-  font-size: 20rpx;
-  color: #666;
-  padding-top: 32rpx;
-}
-
-.weui-media-box {
-  background: white;
-}
-
-.greyFrame {
-  padding: 32rpx;
-  /*padding-top: 0;*/
-  background: #f3f4f8;
-}
-
-.complete {
-  font-size: 20rpx;
-  color: #999;
-  padding-top: 32rpx;
-  padding-bottom: 16rpx;
-}
-
 .floatBtn {
   position: fixed;
   bottom: 0;
   width: 100%;
-  font-size: 32rpx;
+  font-size: 28rpx;
 }
 
 .floatBtn button {
@@ -243,61 +126,13 @@ scroll-view {
   border-radius: 0;
 }
 
-.edit {
-  background: #40587a;
-}
-
 .detail {
   padding: 0 32rpx;
-}
-
-.grey {
-  padding: 32rpx 0;
-  font-size: 24rpx;
-  color: #ccc;
-  padding-bottom: 0;
-}
-
-.item1 {
-  padding-top: 48rpx;
-  font-size: 24rpx;
-  color: #999;
-  line-height: 24rpx;
-  text-align: left;
-  margin-bottom: 24rpx;
-}
-
-.item2 {
-  font-size: 26rpx;
-  /*padding: 32rpx 0;*//*padding-top: 48rpx;*/
-  color: #666;
-  letter-spacing: 0;
-  line-height: 26rpx;
-  text-align: left;
-}
-
-.backColor {
-  margin-top: 32rpx;
-  background: #fafafa;
-  padding: 32rpx;
 }
 
 .title {
   text-align: left;
   /*margin-bottom:48rpx;*/
-}
-
-.title_icon {
-  height: 28rpx;
-  width: 28rpx;
-  margin-right: 24rpx;
-}
-
-.title_name {
-  font-size: 28rpx;
-  color: #333;
-  line-height: 28rpx;
-  text-align: left;
 }
 
 .sort_item {
@@ -326,22 +161,10 @@ scroll-view {
   text-align: center;
 }
 
-.ziben {
-  width: 50%;
-  padding-bottom: 32rpx;
-}
-
-.detail .grey, .detail .item1, .detail .item2 {
-  text-align: left;
-}
-
-.detail {
-  background: white;
-}
-
 .maintainProject {
   background: #40587a;
   color: white;
+  padding: 30rpx 0;
 }
 
 /*新的页面*/
@@ -455,6 +278,7 @@ scroll-view {
   top: -16rpx;
   text-align: center;
 }
+
 .applyProjectNew {
   font-size: 18rpx;
   color: #f44c4c;
@@ -1243,8 +1067,8 @@ scroll-view {
 
 .contentAll view {
   text-align: left;
-  word-break:break-all;
-  flex-wrap:wrap;
+  word-break: break-all;
+  flex-wrap: wrap;
 }
 
 .companyBrand view {
@@ -1316,8 +1140,8 @@ scroll-view {
   padding: 0 16rpx;
   margin-right: 24rpx;
   flex-wrap: nowrap;
-  white-space:nowrap;
-  margin-bottom:18rpx;
+  white-space: nowrap;
+  margin-bottom: 18rpx;
 }
 
 .pro_sort_right {
@@ -1736,3 +1560,55 @@ scroll-view {
   overflow: hidden;
   white-space: nowrap;
 } */
+
+/* 按钮的样式 */
+
+.btnPic {
+  height: 28rpx;
+  width: 28rpx;
+  margin-right: 10rpx;
+  margin-top: 4rpx;
+}
+
+.btn1 {
+  margin-left: 82rpx;
+  padding-right: 76rpx;
+  border-right: 1rpx solid #fff;
+}
+
+.btn2 {
+  margin-left: 102rpx;
+}
+
+#productBox {
+  background-color: #fff;
+  border-radius: 4rpx;
+  width: 91%;
+  height: 176rpx;
+  padding: 30rpx;
+  position: relative;
+}
+
+.productTitle {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 30rpx;
+  text-align: left;
+}
+#productBox .productContent{
+  margin-top:44rpx;
+  text-align: left;   
+}
+
+#productBox .projectTips {
+  position: absolute;
+  right: 16rpx;
+  margin: 0;
+  height: 30rpx;
+  line-height: 30rpx;
+}
+
+.productContent {
+  font-size: 24rpx;
+  color: #666;
+}
