--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -132,7 +132,8 @@ page {
   background: #fff;
   border-radius: 8rpx;
   width: 208rpx;
-  height: 144rpx;
+  height: 80rpx;
+  padding:32rpx 0;
 }
 
 .user_popularity view:first-child, .user_attention view:first-child,
@@ -197,7 +198,8 @@ page {
   width: 32rpx;
   height: 32rpx;
   opacity: 0.3;
-  margin-right: 32rpx;
+   margin-right: 32rpx; 
+  margin-top:40rpx;
 }
 
 .blockTitle {
@@ -215,7 +217,7 @@ page {
   color: #fff;
   line-height: 54rpx;
   text-align: center;
-  margin-bottom:29rpx;
+  margin-bottom: 29rpx;
 }
 
 .number {
@@ -230,4 +232,12 @@ page {
   width: 12rpx;
   height: 20rpx;
   padding: 39rpx 0;
+}
+
+.popularity-Num,.attention-Num {
+  font-size: 36rpx;
+  color: #333;
+  line-height: 36rpx;
+  text-align: center;
+  margin-bottom: 16rpx;
 }
