--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -163,7 +163,7 @@ page {
   padding-left: 264rpx;
 }
 
-/*名片*/
+/*-----------------------------------------名片-------------------------------*/
 
 .others_pic {
   width: 120rpx;
@@ -249,7 +249,7 @@ page {
   font-size: 20rpx;
 }
 
-/*我的项目卡片*/
+/*---------------------------我的项目卡片------------------------------*/
 
 .on {
   color: #40587a;
@@ -305,7 +305,7 @@ page {
   text-align: center;
 }
 
-/*按钮一号*/
+/*----------------------------按钮一号---------------------------------*/
 
 .buttonOne button {
   background: #40587a;
@@ -319,7 +319,7 @@ textarea {
   width: auto;
 }
 
-/*多选标签选中时样式*/
+/*-------------------------多选标签选中时样式----------------------------*/
 
 .tips .checkedOne {
   /* border: 1px solid #333; *//* color: #fff; *//* background: #40587a; */
@@ -328,17 +328,10 @@ textarea {
   color: #40587a;
 }
 
-/*.tips .checkedOne {
-  border: 1px solid #333;
-  color: #333;
-}*/
-
 .checkedOne {
   border: 1px solid #333;
   color: #333;
 }
-
-/*template name="input jump"*/
 
 .text {
   padding: 32rpx 0;
@@ -415,7 +408,7 @@ textarea {
   display: flex;
 }
 
-/*搜索框*/
+/*---------------------------------我的人脉搜索框-------------------------------------*/
 
 .search_frame {
   position: fixed;
@@ -449,8 +442,7 @@ textarea {
   line-height: 56rpx;
 }
 
-/*提示按钮  */
-
+/*---------------------------------提示按钮---------------------------------------*/
 .t-accreditation {
   background: #fff1e8;
   height: 88rpx;
@@ -520,7 +512,8 @@ textarea {
   color: #fff;
   text-align: center;
 }
-/*筛选和搜索框 */
+
+/*-------------------------------------筛选和搜索框--------------------------------------*/
 .screen {
   background: #fff;
   width: 750rpx;
@@ -627,7 +620,7 @@ textarea {
 .search_icon {
   padding: 10rpx 30rpx;
 }
-/*模态框*/
+/*---------------------------------模态框-----------------------------------*/
 .t-modal {
   position: absolute;
   left: 0;
@@ -639,7 +632,7 @@ textarea {
   z-index: 99;
 }
 
-/*项目卡片*/
+/*---------------------------------项目卡片------------------------------------*/
 .t-outBox {
   margin: 0 16px 0 16px;
   width: auto;
@@ -931,3 +924,5 @@ textarea {
 .t-noLight {
   color: #999;
 }
+
+/*---------------------------------人脉卡片----------------------------------- */
