--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -613,49 +613,48 @@
 <!---资源对接-->
 <template name="resourceProject">
   <block wx:for="{{contentList}}" wx:key="{{contentList}}">
-    <view class="outsideBox" data-id="{{item.user_id}}" catchtap="personDetail">
-      <view class="applyMyProject contacts-detailm">
-        <view class="introduceBox flex">
-          <view class="userName">{{item.user_name}}</view>
-          <view class="userPosition">{{item.user_career}}</view>
-          <view class="userPart flex" wx:if="{{user.authentication[0].group_title}}">
+    <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="personDetail">
+      <view class="t-applyMyProject t-contacts-detailm">
+        <view class="t-introduceBox flex">
+          <view class="t-userName">{{item.user_name}}</view>
+          <view class="t-userPosition">{{item.user_career}}</view>
+          <view class="t-userPart flex" wx:if="{{user.authentication[0].group_title}}">
             <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
-            <view class="userPart1">{{user.authentication[0].group_title}}</view>
+            <view class="t-userPart1">{{user.authentication[0].group_title}}</view>
             <!-- <view class="userPart1">买方FA</view> -->
           </view>
-          <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-          <image src="{{item.user_avatar_url}}" class="userPic" wx:if="{{item.user_avatar_url}}"></image>
+          <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+          <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
         </view>
-        <view class="userCompany">{{item.user_company}}</view>
-        <view class="record">{{item.active_status}}</view>
-        <view class="investmentGroup flex" wx:if="{{item.resource.res_find != ''}}">
-          <view class="investmentGroupTitle">寻求资源：</view>
-          <view class="investmentGroupContent">
+        <view class="t-userCompany">{{item.user_company}}</view>
+        <view class="t-record">{{item.active_status}}</view>
+        <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_find != ''}}">
+          <view class="t-roundGroupTitle">寻求资源：</view>
+          <view class="t-roundGroupContent">
             <block  wx:for="{{item.resource.res_find}}" wx:key="{{item.resource.res_find.index}}" wx:for-item ='userFind'>
-              <label class="{{userFind.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>  
-              <label class="{{userFind.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>  
+              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_find.length-1}}">{{userFind.resource_name}}、</label>  
+              <label class="{{userFind.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==item.resource.res_find.length-1}}">{{userFind.resource_name}}</label>  
             </block>
           </view>
         </view>
-        <view class="roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
-          <view class="roundGroupTitle">提供资源：</view>
-          <view class="roundGroupContent">
+        <view class="t-roundGroupPush flex" wx:if="{{item.resource.res_give != ''}}">
+          <view class="t-roundGroupTitle">提供资源：</view>
+          <view class="t-roundGroupContent">
             <block  wx:for="{{item.resource.res_give}}" wx:key="{{item.resource.res_give.index}}" wx:for-item ='userGive'>
-              <label class="{{userGive.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index < item.resource.res_give.length-1}}">
+              <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index < item.resource.res_give.length-1}}">
                {{userGive.resource_name}}、
               </label>  
-              <label class="{{userGive.is_match == 1 ? 'hightLight':'noLight'}}" wx:if="{{index ==  item.resource.res_give.length-1}}">
+              <label class="{{userGive.is_match == 1 ? 't-hightLight':'t-noLight'}}" wx:if="{{index ==  item.resource.res_give.length-1}}">
                {{userGive.resource_name}}
               </label> 
             </block>
           </view>
         </view>
       <view>
-        <view class="describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
+        <view class="t-describe" wx:if="{{item.resource.res_desc != null}}">{{item.resource.res_desc}}</view>
       </view>
       </view>
     </view>
-
   </block>
 </template>
 
